# vaiber

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  input.css  justfile  package-lock.json  tailwind.config.js
.github/workflows/: dioxus.yml
desktop/: Cargo.toml  Dioxus.toml  README.md  justfile
desktop/assets/: p256x256.icns
desktop/src/: error.rs  main.rs  node.rs  storage.rs
docs/: 404.html
docs/assets/: hero-73814b9c51154d2e.css.br  main-8befc65445522528.css  main-8befc65445522528.css.br  web-82026f6f475d1473.js.br  web_bg-622905c1ea44033f.wasm.br
mobile/: Cargo.toml
mobile/src/: main.rs
ui/: Cargo.toml
ui/src/: hero.rs  lib.rs  peer.rs  storage.rs  wallet.rs
ui/src/peer/: controls.rs
web/: Cargo.toml  Dioxus.toml  justfile
web/.cargo/: config.toml
web/docs/assets/: web-82026f6f475d1473.js  web_bg-622905c1ea44033f.wasm
web/src/: main.rs  storage.rs
