[workspace]
resolver = "2"
members = ["ui", "web", "desktop", "mobile"]

[workspace.package]
version = "0.1.0"
authors = ["Doug Anderson <doug@peerpiper.io>"]
edition = "2024"
license = "MIT"
homepage = "https://douganderson444.github.io/vaiber/"

[workspace.dependencies]
dioxus = { version = "0.6.0" }
seed-keeper-core = { git = "https://github.com/DougAnderson444/seed-keeper" }
# workspace
ui = { path = "ui" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
