[workspace]
resolver = "2"
members = ["ui", "web", "desktop", "mobile"]

[workspace.package]
version = "0.1.0"
authors = ["Doug Anderson <doug@peerpiper.io>"]
edition = "2024"
license = "MIT"
homepage = "https://douganderson444.github.io/vaiber/"

[workspace.dependencies]
dioxus = { version = "0.6.0" }
seed-keeper-core = { git = "https://github.com/DougAnderson444/seed-keeper" }
base64 = "0.22.1"
ui = { path = "ui" }
directories = "6.0.0"
thiserror = "2.0"
bs = { git = "https://github.com/cryptidtech/bs", branch = "doug/bs-p2p" }
bs-wallets = { git = "https://github.com/cryptidtech/bs", branch = "doug/bs-p2p" }
bs-peer = { git = "https://github.com/cryptidtech/bs", branch = "doug/bs-p2p" }
bs-p2p = { git = "https://github.com/cryptidtech/bs", branch = "doug/bs-p2p" }
multicid = { git = "https://github.com/cryptidtech/bs", branch = "doug/bs-p2p" }
multicodec = { git = "https://github.com/cryptidtech/bs", branch = "doug/bs-p2p" }
provenance-log = { git = "https://github.com/cryptidtech/bs", branch = "doug/bs-p2p" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[patch.'https://github.com/cryptidtech/bs.git']
bs = { path = "../../clones/bs/crates/bs" }
bs-wallets = { path = "../../clones/bs/crates/bs-wallets/" }
bs-peer = { path = "../../clones/bs/crates/bs-peer/" }
bs-p2p = { path = "../../clones/bs/crates/bs-p2p/" }
multicid = { path = "../../clones/bs/crates/multicid/" }
multicodec = { path = "../../clones/bs/crates/multicodec/" }
provenance-log = { path = "../../clones/bs/crates/provenance-log/" }
