[package]
name = "desktop"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
dioxus = { workspace = true, features = [] }
ui = { workspace = true }
directories.workspace = true
thiserror.workspace = true

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
