[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
seed-keeper-core.workspace = true
bs.workspace = true
bs-wallets.workspace = true
bs-peer.workspace = true
bs-p2p.workspace = true
multicid.workspace = true
multicodec.workspace = true
provenance-log.workspace = true
libp2p = { version = "0.54.1" }
tokio = { version = "1", features = ["sync"] }
futures = "0.3.31"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.64"
wasm-bindgen-futures = "0.4.50"

# use the dev feature when building for development 
[features]
default = ["dev"]
dev = []
