[package]
name = "web"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
dioxus = { workspace = true, features = [] }
ui = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
gloo-storage = "0.3.0"
web-sys = { version = "0.3.64", features = ["console"] }
wasm-bindgen = "0.2.87"
base64 = "0.22.1"

[features]
default = ["web"]
web = ["dioxus/web"]
