[package]
name = "web"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
dioxus = { workspace = true, features = [] }
ui = { workspace = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
# We have netsed deps that use v0.2, so we need to ensure the feature is flagged here
getrandom_v02 = { package = "getrandom", version = "0.2", features = ["js"] }
gloo-storage = "0.3.0"
web-sys = { version = "0.3.64", features = ["console", "Window"] }
wasm-bindgen = "0.2.87"
base64.workspace = true

[features]
default = ["web"]
web = ["dioxus/web"]
